# oniwaban

./: .gitignore  README.md  justfile  pyproject.toml
.github/: CODEOWNERS
docs/architecture/: integration-patterns.md  model-build-pipeline.md  overview.md  role-abstraction.md
src/oniwaban/: __init__.py
